// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`deriveAll – characterisation > auto: all owners 1`] = `
{
  "cashflowSample": [
    {
      "avail": 8199.67,
      "bound": 5340.83,
      "deficitMonthly": 0,
      "sp": 2858.84,
      "year": 2026,
    },
    {
      "avail": 9486.28,
      "bound": 3903.87,
      "deficitMonthly": 0,
      "sp": 4782.4,
      "year": 2031,
    },
    {
      "avail": 11573.08,
      "bound": 4294.58,
      "deficitMonthly": 0,
      "sp": 7278.5,
      "year": 2036,
    },
  ],
  "cf": {
    "assetYieldIncome": 300,
    "avail": 8199.67,
    "bound": 5340.83,
    "deficitMonthly": 0,
    "eff": 2858.84,
    "immoNetCF": -1700.33,
    "quote": 34.87,
    "saldo": 0,
    "streamExpense": 3850,
    "streamIncome": 9100,
  },
  "debt": 658000,
  "gross": 1500000,
  "loans": [
    {
      "annuitat": 920.83,
      "id": "x1",
      "yrsLeft": 5,
    },
    {
      "annuitat": 1842,
      "id": "x3",
      "yrsLeft": 25,
    },
    {
      "annuitat": 633.33,
      "id": "x4",
      "yrsLeft": 10,
    },
    {
      "annuitat": 420,
      "id": "l1",
      "yrsLeft": 5,
    },
    {
      "annuitat": 0,
      "id": "l2",
      "yrsLeft": null,
    },
  ],
  "net": 842000,
  "projection": [
    {
      "age": 40,
      "base": 842000,
      "cons": 842000,
      "debt": 658000,
      "opt": 842000,
      "sp": 2859,
    },
    {
      "age": 45,
      "base": 1218045,
      "cons": 1067691,
      "debt": 536159,
      "opt": 1383698,
      "sp": 4782,
    },
    {
      "age": 50,
      "base": 1787312,
      "cons": 1454764,
      "debt": 272990,
      "opt": 2189207,
      "sp": 7278,
    },
    {
      "age": 55,
      "base": 2581406,
      "cons": 2021496,
      "debt": 198876,
      "opt": 3322146,
      "sp": 8491,
    },
    {
      "age": 60,
      "base": 3372381,
      "cons": 2489067,
      "debt": 111920,
      "opt": 4638394,
      "sp": 5918,
    },
    {
      "age": 65,
      "base": 4122272,
      "cons": 2809083,
      "debt": 10000,
      "opt": 6164151,
      "sp": 0,
    },
    {
      "age": 70,
      "base": 4913270,
      "cons": 3044929,
      "debt": 10000,
      "opt": 8078691,
      "sp": 0,
    },
  ],
  "sparDist": [
    {
      "cls": "Aktien-ETF",
      "monthly": 2722.7,
    },
    {
      "cls": "Krypto",
      "monthly": 136.14,
    },
  ],
  "wavgReturn": 4.63,
}
`;

exports[`deriveAll – characterisation > complex: all owners 1`] = `
{
  "cashflowSample": [
    {
      "avail": 8164.49,
      "bound": 5340.83,
      "deficitMonthly": 0,
      "sp": 2500,
      "year": 2026,
    },
    {
      "avail": 9429.24,
      "bound": 3903.87,
      "deficitMonthly": 0,
      "sp": 1831.38,
      "year": 2031,
    },
    {
      "avail": 11488.14,
      "bound": 4294.58,
      "deficitMonthly": 0,
      "sp": 2901.35,
      "year": 2036,
    },
  ],
  "cf": {
    "assetYieldIncome": 264.83,
    "avail": 8164.49,
    "bound": 5340.83,
    "deficitMonthly": 0,
    "eff": 2500,
    "immoNetCF": -1700.33,
    "quote": 30.62,
    "saldo": 323.66,
    "streamExpense": 3850,
    "streamIncome": 9100,
  },
  "debt": 658000,
  "gross": 1500000,
  "loans": [
    {
      "annuitat": 920.83,
      "id": "x1",
      "yrsLeft": 5,
    },
    {
      "annuitat": 1842,
      "id": "x3",
      "yrsLeft": 25,
    },
    {
      "annuitat": 633.33,
      "id": "x4",
      "yrsLeft": 10,
    },
    {
      "annuitat": 420,
      "id": "l1",
      "yrsLeft": 5,
    },
    {
      "annuitat": 0,
      "id": "l2",
      "yrsLeft": null,
    },
  ],
  "net": 842000,
  "projection": [
    {
      "age": 40,
      "base": 842000,
      "cons": 842000,
      "debt": 658000,
      "opt": 842000,
      "sp": 2500,
    },
    {
      "age": 45,
      "base": 1263289,
      "cons": 1109924,
      "debt": 536159,
      "opt": 1431421,
      "sp": 1831,
    },
    {
      "age": 50,
      "base": 1803180,
      "cons": 1450338,
      "debt": 272990,
      "opt": 2226778,
      "sp": 2901,
    },
    {
      "age": 55,
      "base": 2608337,
      "cons": 2006729,
      "debt": 198876,
      "opt": 3400833,
      "sp": 3126,
    },
    {
      "age": 60,
      "base": 3490947,
      "cons": 2537460,
      "debt": 111920,
      "opt": 4856324,
      "sp": 3367,
    },
    {
      "age": 65,
      "base": 4445220,
      "cons": 3010191,
      "debt": 10000,
      "opt": 6675079,
      "sp": 0,
    },
    {
      "age": 70,
      "base": 5487442,
      "cons": 3399831,
      "debt": 10000,
      "opt": 9011092,
      "sp": 0,
    },
  ],
  "sparDist": [
    {
      "cls": "Aktien-ETF",
      "monthly": 1500,
    },
    {
      "cls": "Anleihen-ETF",
      "monthly": 500,
    },
    {
      "cls": "Krypto",
      "monthly": 200,
    },
  ],
  "wavgReturn": 4.63,
}
`;

exports[`deriveAll – characterisation > complex: filtered to one owner 1`] = `
{
  "cashflowSample": [
    {
      "avail": 4259,
      "bound": 4552.5,
      "deficitMonthly": 93.5,
      "sp": 0,
      "year": 2026,
    },
    {
      "avail": 4942.32,
      "bound": 3903.87,
      "deficitMonthly": 0,
      "sp": 1038.45,
      "year": 2031,
    },
    {
      "avail": 5715.44,
      "bound": 4294.58,
      "deficitMonthly": 0,
      "sp": 1420.86,
      "year": 2036,
    },
  ],
  "cf": {
    "assetYieldIncome": 0,
    "avail": 4259,
    "bound": 4552.5,
    "deficitMonthly": 93.5,
    "eff": 0,
    "immoNetCF": -941,
    "quote": 0,
    "saldo": -293.5,
    "streamExpense": 3850,
    "streamIncome": 5200,
  },
  "debt": 230000,
  "gross": 560000,
  "loans": [
    {
      "annuitat": 552.5,
      "id": "x1",
      "yrsLeft": 5,
    },
    {
      "annuitat": 921,
      "id": "x3",
      "yrsLeft": 25,
    },
    {
      "annuitat": 0,
      "id": "l2",
      "yrsLeft": null,
    },
  ],
  "net": 330000,
  "projection": [
    {
      "age": 40,
      "base": 330000,
      "cons": 330000,
      "debt": 230000,
      "opt": 330000,
      "sp": 0,
    },
    {
      "age": 45,
      "base": 421838,
      "cons": 366175,
      "debt": 173080,
      "opt": 482976,
      "sp": 1038,
    },
    {
      "age": 50,
      "base": 632777,
      "cons": 507708,
      "debt": 141495,
      "opt": 783611,
      "sp": 1421,
    },
    {
      "age": 55,
      "base": 1078835,
      "cons": 857596,
      "debt": 104438,
      "opt": 1370175,
      "sp": 1864,
    },
    {
      "age": 60,
      "base": 1534881,
      "cons": 1160823,
      "debt": 60960,
      "opt": 2064739,
      "sp": 2378,
    },
    {
      "age": 65,
      "base": 1856525,
      "cons": 1261536,
      "debt": 10000,
      "opt": 2764717,
      "sp": 0,
    },
    {
      "age": 70,
      "base": 1984360,
      "cons": 1104401,
      "debt": 10000,
      "opt": 3453584,
      "sp": 0,
    },
  ],
  "sparDist": [
    {
      "cls": "Aktien-ETF",
      "monthly": 1500,
    },
    {
      "cls": "Anleihen-ETF",
      "monthly": 500,
    },
    {
      "cls": "Krypto",
      "monthly": 200,
    },
  ],
  "wavgReturn": 4.14,
}
`;

exports[`deriveAll – characterisation > complex: projection limited to one asset class 1`] = `
{
  "cashflowSample": [
    {
      "avail": 9100,
      "bound": 5190.83,
      "deficitMonthly": 0,
      "sp": 2500,
      "year": 2026,
    },
    {
      "avail": 10189.24,
      "bound": 3753.87,
      "deficitMonthly": 0,
      "sp": 1831.38,
      "year": 2031,
    },
    {
      "avail": 11410.52,
      "bound": 4144.58,
      "deficitMonthly": 0,
      "sp": 2901.35,
      "year": 2036,
    },
  ],
  "cf": {
    "assetYieldIncome": 264.83,
    "avail": 8164.49,
    "bound": 5340.83,
    "deficitMonthly": 0,
    "eff": 2500,
    "immoNetCF": -1700.33,
    "quote": 30.62,
    "saldo": 323.66,
    "streamExpense": 3850,
    "streamIncome": 9100,
  },
  "debt": 658000,
  "gross": 1500000,
  "loans": [
    {
      "annuitat": 920.83,
      "id": "x1",
      "yrsLeft": 5,
    },
    {
      "annuitat": 1842,
      "id": "x3",
      "yrsLeft": 25,
    },
    {
      "annuitat": 633.33,
      "id": "x4",
      "yrsLeft": 10,
    },
    {
      "annuitat": 420,
      "id": "l1",
      "yrsLeft": 5,
    },
    {
      "annuitat": 0,
      "id": "l2",
      "yrsLeft": null,
    },
  ],
  "net": 842000,
  "projection": [
    {
      "age": 40,
      "base": 250000,
      "cons": 250000,
      "debt": 50000,
      "opt": 250000,
      "sp": 2500,
    },
    {
      "age": 45,
      "base": 468290,
      "cons": 433733,
      "debt": 0,
      "opt": 505650,
      "sp": 1831,
    },
    {
      "age": 50,
      "base": 765956,
      "cons": 672724,
      "debt": 0,
      "opt": 874584,
      "sp": 2901,
    },
    {
      "age": 55,
      "base": 1326967,
      "cons": 1133622,
      "debt": 0,
      "opt": 1568320,
      "sp": 3126,
    },
    {
      "age": 60,
      "base": 1915218,
      "cons": 1546954,
      "debt": 0,
      "opt": 2403166,
      "sp": 3367,
    },
    {
      "age": 65,
      "base": 2459861,
      "cons": 1826187,
      "debt": 0,
      "opt": 3356015,
      "sp": 0,
    },
    {
      "age": 70,
      "base": 2960626,
      "cons": 1958954,
      "debt": 0,
      "opt": 4487104,
      "sp": 0,
    },
  ],
  "sparDist": [
    {
      "cls": "Aktien-ETF",
      "monthly": 1500,
    },
    {
      "cls": "Anleihen-ETF",
      "monthly": 500,
    },
    {
      "cls": "Krypto",
      "monthly": 200,
    },
  ],
  "wavgReturn": 4.63,
}
`;

exports[`deriveAll – characterisation > demo: all owners 1`] = `
{
  "cashflowSample": [
    {
      "avail": 10036.67,
      "bound": 2500,
      "deficitMonthly": 0,
      "sp": 7536.67,
      "year": 2026,
    },
    {
      "avail": 11591.56,
      "bound": 2760.2,
      "deficitMonthly": 0,
      "sp": 8831.36,
      "year": 2031,
    },
    {
      "avail": 13506.07,
      "bound": 3047.49,
      "deficitMonthly": 0,
      "sp": 10458.59,
      "year": 2036,
    },
  ],
  "cf": {
    "assetYieldIncome": 1416.67,
    "avail": 10036.67,
    "bound": 2500,
    "deficitMonthly": 0,
    "eff": 7536.67,
    "immoNetCF": 120,
    "quote": 75.09,
    "saldo": 0,
    "streamExpense": 2500,
    "streamIncome": 8500,
  },
  "debt": 130000,
  "gross": 1560000,
  "loans": [
    {
      "annuitat": 850,
      "id": "a7",
      "yrsLeft": 17,
    },
  ],
  "net": 1430000,
  "projection": [
    {
      "age": 35,
      "base": 1430000,
      "cons": 1430000,
      "debt": 130000,
      "opt": 1430000,
      "sp": 7537,
    },
    {
      "age": 40,
      "base": 2619213,
      "cons": 2389166,
      "debt": 99395,
      "opt": 2871850,
      "sp": 8831,
    },
    {
      "age": 45,
      "base": 4440045,
      "cons": 3758206,
      "debt": 63351,
      "opt": 5258806,
      "sp": 10459,
    },
    {
      "age": 50,
      "base": 7215043,
      "cons": 5702352,
      "debt": 19341,
      "opt": 9194343,
      "sp": 12494,
    },
    {
      "age": 55,
      "base": 11441541,
      "cons": 8462991,
      "debt": 0,
      "opt": 15679491,
      "sp": 15951,
    },
    {
      "age": 60,
      "base": 17832313,
      "cons": 12340739,
      "debt": 0,
      "opt": 26318846,
      "sp": 19271,
    },
    {
      "age": 65,
      "base": 27490998,
      "cons": 17790683,
      "debt": 0,
      "opt": 43767637,
      "sp": 23596,
    },
    {
      "age": 70,
      "base": 42056736,
      "cons": 25432973,
      "debt": 0,
      "opt": 72347871,
      "sp": 29294,
    },
  ],
  "sparDist": [
    {
      "cls": "Aktien-ETF",
      "monthly": 7536.67,
    },
  ],
  "wavgReturn": 7.44,
}
`;
